--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.4",
     "morgan": "^1.10.1",
-    "razorpay": "^2.9.6"
+    "razorpay": "^2.9.6",
+    "seed": "node seed.js"
   }
 }
